# github-actions-demo

./: .flake8  README.md  pyproject.toml
.github/workflows/: cheatsheet.yml  demo-pipeline.yml  python-aws-lambda-ci.yml
src/: handler.py
tests/: test_handler.py
